--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,10 +16,7 @@
         "SwitchCase": 1
       }
     ],
-    "linebreak-style": [
-      "error",
-      "unix"
-    ],
+    "linebreak-style": "off",
     "quotes": [
       "warn",
       "double"
