--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "colorette": "^1.3.0",
     "discord.js": "^13.0.1",
     "dotenv": "^10.0.0",
-    "mongoose": "^6.2.6"
+    "mongoose": "^6.2.6",
+    "node-os-utils": "^1.3.6"
   },
   "devDependencies": {
     "eslint": "^7.30.0",
