--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "colorette": "^1.3.0",
     "discord.js": "^13.0.1",
     "dotenv": "^10.0.0",
+    "lodash.isarray": "^4.0.0",
+    "lodash.isequal": "^4.5.0",
+    "lodash.isobject": "^3.0.2",
+    "lodash.transform": "^4.6.0",
     "mongoose": "^6.2.6",
     "node-os-utils": "^1.3.6"
   },
